# aruco_gate_detector

./: CMakeLists.txt  CMakeLists_old.txt  package.xml  package_old.xml
config/aruco_gate_detector/: real_params.yaml  sim_params.yaml
config/usb_cam/: camera_info.yaml  params.yaml
include/aruco_gate_detector/: aruco_gate_detector.hpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/aruco_gate_detector/lib/aruco_gate_detector/: aruco_gate_detector_node
install/aruco_gate_detector/share/ament_index/resource_index/package_run_dependencies/: aruco_gate_detector
install/aruco_gate_detector/share/ament_index/resource_index/parent_prefix_path/: aruco_gate_detector
install/aruco_gate_detector/share/aruco_gate_detector/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/aruco_gate_detector/share/aruco_gate_detector/cmake/: aruco_gate_detectorConfig.cmake
launch/: aruco_gate_detector_launch.py  aruco_gate_detector_real_launch.py  aruco_gate_detector_sim_launch.py  test.launch.py
log/: latest_build
src/: aruco_gate_detector.cpp  aruco_gate_detector_node.cpp  aruco_gate_detector_old.cpp
tests/: profiling_cmake.cmake  test_aruco_detection_benchmark.cpp
